// src/proto/ticket.proto
syntax = "proto3";

package ticket;

import "general.proto";
import "user_messages.proto";
import "session_messages.proto";

message TicketDto {
  string ticket_date =1;
  string movie_name=2;
  string room=3;
}

message BuyTicketResponse {
  TicketDto ticket = 1;
  general.ResponseStatus status = 2;
}

message WatchMovieRequest {
  string user_id = 1;
  string ticket_id = 2;
}

message MovieDto {
  string movie_name = 1;
  string room = 2;
  string date = 3;
}

message WatchMovieResponse {
  general.ResponseStatus status = 1;
  MovieDto movie = 2;
}